--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+$assets_path: '../node_modules/simple-ng1.5-es5/';
+@import '../node_modules/simple-ng1.5-es5/styles/style.scss';
