--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
-$assets_path: '../node_modules/simple-ng1.5-es5/';
-@import '../node_modules/simple-ng1.5-es5/styles/style.scss';
+
+body {
+  background-position: center center;
+  background-image: url('../node_modules/simple-ng1.5-es5/images/dc_villains.jpg');
+}
+old-select-wrapper {
+  background-color: rgba(255, 255, 255, .98);
+  width: 50%;
+  padding: 40px 20px 60px 20px;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.5), 0 6px 6px rgba(0,0,0,0.5);
+}
+@media only screen and (max-width: 890px) {
+  old-select-wrapper {
+    width: 90%;
+  }
+}
